Fix problem with cards not aligning at top.

--- a/styles.css
+++ b/styles.css
@@ -49,6 +49,7 @@ input[type=number] {
     text-align: left;
     width: 15.625em;
     cursor: pointer;
+    vertical-align: top;
 }
 
 .tile .poster-container {
